<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_tic_tac_toe">

        <TextView
            android:id="@+id/tvSignTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ac_sign_up"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDialogMassage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/email_reset_email_massage"
            android:textColor="@color/color_red"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/edSIgnInEmail"
            app:layout_constraintEnd_toEndOf="@+id/edSIgnInEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edSIgnInEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvSignTitle" />

        <EditText
            android:id="@+id/edSIgnInEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="text|textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#B1A8A8"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNick" />

        <EditText
            android:id="@+id/edSIgnPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#B1A8A8"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edSIgnInEmail" />

        <Button
            android:id="@+id/bSignUpIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:text="@string/sign_up_action"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tvHaveAnAcc"
            app:layout_constraintEnd_toEndOf="@+id/edSIgnPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edSIgnPassword"
            app:layout_constraintTop_toBottomOf="@+id/btGoogleSignIn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bForgetP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/edSIgnPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edSIgnPassword"
            app:layout_constraintTop_toBottomOf="@+id/bSignUpIn" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btGoogleSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="@+id/bSignUpIn"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/bSignUpIn"
            app:layout_constraintTop_toBottomOf="@+id/edSIgnPassword" />

        <TextView
            android:id="@+id/tvHaveAnAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Вже є акаунт"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bSignUpIn"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/bSignUpIn"
            app:layout_constraintTop_toBottomOf="@+id/bForgetP"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edtNick"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="#B1A8A8"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:hint="Nickname"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
